# openai-examples

./: pyproject.toml
structured_outputs/: 1_extract_dates.ipynb
